Support Java 8 with Swing portable app
Co-authored-by: Marcelo Garcia <guallinton@users.noreply.github.com>